syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "GenerationModeType";


message GenerationMode {
  enum GenerationModeEnum {
    REAL = 0;
    TEST = 1;
    DEMO = 2;
  }
  GenerationModeEnum type = 1;
}
